--- a/config.default.json
+++ b/config.default.json
@@ -2,5 +2,6 @@
     "host": "127.0.0.1",
     "port": 5666,
     "root_server": "./server",
-    "root_client": "./client"
+    "root_client": "./client",
+    "ignore": [".git", ".svn", ".idea"]
 }
