--- a/config.default.json
+++ b/config.default.json
@@ -1,7 +1,11 @@
 {
     "host": "127.0.0.1",
     "port": 5666,
-    "root_server": "./server",
-    "root_client": "./client",
-    "ignore": [".git", ".svn", ".idea"]
+    "pairs": [
+        {
+            "root_server": "/home/work",
+            "root_client": "D:/work",
+            "ignore": [".git", ".svn", ".idea"]
+        },
+    ]
 }
