--- a/config.default.json
+++ b/config.default.json
@@ -1,6 +1,7 @@
 {
     "host": "127.0.0.1",
     "port": 5666,
+    "url": "http://remote.com/",
     "pairs": [
         {
             "root_server": "/home/work",
